feat: expande modelo de livro com editora, isbn e viloes persistidos localmente